# qae-claude-mcp-example

./: .gitignore  DEVELOPMENT.md  EXAMPLES.md  INDEX.md  INTEGRATION.md  LICENSE  MANIFEST.in  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  claude_desktop_config.example.json  glama.json  pyproject.toml  requirements.txt  server.json  setup.cfg
src/qae_mcp_server/: __init__.py  __main__.py  server.py
tests/: __init__.py  test_server.py
