[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qae-claude-mcp-server"
version = "0.1.0"
description = "MCP server for QAE safety certification"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Northbeam Solutions LLC", email = "info@northbeam.solutions"}
]
keywords = ["mcp", "safety", "certification", "autonomous", "qae"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "qae-safety>=0.1.1",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://qaesubstrate.com"
Documentation = "https://qaesubstrate.com/docs"
Repository = "https://github.com/tb8412/qae-claude-mcp-example"
"Bug Tracker" = "https://github.com/tb8412/qae-claude-mcp-example/issues"

[project.scripts]
qae-mcp-server = "qae_mcp_server:main"

[tool.setuptools]
packages = ["qae_mcp_server"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
