[metadata]
name = qae-claude-mcp-server
version = 0.1.0

[options]
zip_safe = False
include_package_data = True

[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    .eggs,
    *.egg,
    build,
    dist
ignore = E203, W503

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = --strict-markers --tb=short

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
ignore_missing_imports = True

[coverage:run]
source = src
omit =
    */tests/*
    */test_*.py
    */__main__.py

[coverage:report]
precision = 2
show_missing = True
skip_covered = False
